# ufpi-ed-2025

./: README.md  flake.nix
bstvis/: index.html  package.json
bstvis/src/: bst.ts  main.ts  style.css  visualiser.ts
containers/: main.py  symbtree.py  testes.py  wrappers.py
fila_prioridade/: filaprioridade.py  filaprioridade_gui.py  filaprioridade_testes.py
hashtable/: main.py  testes.py
ordenacao/: CMakeLists.txt  algos.cpp  algotime.hpp  graficos.py  main.cpp
